# django-project-template

./: .env  .pg_service.conf  .pgpass  CLAUDE.md  Makefile  README.md  docker-compose.yaml  gunicorn-config.py  pyproject.toml  shell.nix  tailwind.config.js
.github/workflows/: test.yaml
ops/: Dockerfile  build  config.json  deploy  env.sh  envconsul.hcl  run  run_web  setup
ops/k8s/: kustomization.yaml  redis.yaml  web.yaml
ops/tf/: default-variables.hcl  default.tfvars  ecr.tf  main.tf  s3.tf
src/: conftest.py
src/infrastructure/: context_processors.py  fields.py  models.py
src/infrastructure/templatetags/: math.py
src/integration/: admin.py  apps.py  models.py  registry.py
src/integration/tests/: test_registry.py
src/project/: middleware.py  settings.py  urls.py  views.py  wsgi.py
src/static/css/: input.css
src/templates/: app.html  homepage.html  spinner.html
src/tenant/: admin.py  factories.py  forms.py  middleware.py  models.py
src/tenant/management/commands/: createtenant.py
src/tenant/tests/: conftest.py  test_models.py
