[project]
name = "{{ project_name|slugify }}"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django",
    "psycopg",
    "django-allauth[socialaccount]",
    "django-storages[s3]",
    "python-ulid",
    "whitenoise",
    "openai",
    "redis",
    "django-widget-tweaks",
    "httpx",
    "gunicorn",
    "brotli",
    "sentry-sdk[django]",
    "django-prometheus",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/project"]

[tool.uv]
dev-dependencies = [
    "black",
    "pyflakes",
    "python-lsp-server",
    "ruff",
    "pyright",
    "pre-commit",
    "ruff-lsp",
    "pytest",
    "pytest-django",
    "factory-boy",
    "pytest-cov",
    "ipython",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
minversion = "6.0"
addopts = "-ra --reuse-db --no-migrations"                             # --cov=src --cov-report=term-missing"
python_files = ["tests.py", "test_*.py"]
testpaths = ["src/*/tests"]
filterwarnings = ['ignore:Overriding setting DATABASES.*:UserWarning']

[tool.coverage.report]
skip_empty = true
skip_covered = true

[tool.coverage.run]
omit = ["*/migrations/*", "test_*.py", "conftest.py"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
